...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/toolbar_guideline"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_search"
                android:maxLines="2"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="24sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_results_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
