...
        <variable
            name="resultsViewModel"
            type="com.ndanda.bigcommerce.viewmodel.ResultsViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/result_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp">


        <!-- GuideLines-->
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/toolbar_guideline"
            android:contentDescription="@string/back_button" />

        <ImageButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_button"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
